2010-05-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/BindTable.3      Bring in line with actual implementation.
	* generic/tk.decls     Change Tk_CreateBinding param name, as in doc
	* generic/tkInt.decls  CONSTify TkCopyAndGlobalEval, TkpSetMainMenubar,
	* generic/tkBind.c     TkpMenuNotifyToplevelCreate, and TkSetWindowMenuBar
	* generic/tkMenu.c
	* generic/tkDecls.h    (regenerated)
	* generic/tkIntDecls.h (regenerated)
	* carbon/tkMacOSXMenu.c
	* macosx/tkMacOSXMenu.c
	* unix/tkUnixMenu.c
	* win/tkWinMenu.c

2010-05-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump patchlevel to 8.6b1.2 to distinguish
	* library/tk.tcl:	CVS snapshots from earlier snapshots as well
	* unix/configure.in:	as the 8.6b1 and 8.6b2 releases.
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

2010-05-03  Donal K. Fellows  <dkf@users.sf.net>

	* library/button.tcl (CheckInvoke, CheckEnter): [Patch 1530276 redux]:
	Apply a bit more care to ensure that things continue to work correctly
	even when there is no -selectcolor defined.

2010-04-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWin.h:		Unnecessary TCL_STORAGE_CLASS re-definition
	* win/tkWinInt.h:	Make various functions MODULE_SCOPE
	* win/tkWinButton.c:	TCHAR-related fixes, making al those
	* win/tkWinFont.c:	files compile fine when TCHAR != char.
	* win/tkWinScrlbr.c:
	* win/tkWinWindow.c:
	* win/tkWinWm.c:
	* win/tkWinX.c:
	* win/ttkWinMonitor.c:
	* win/ttkWinXPTheme.c:

2010-04-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPNG.c (ReadIDAT, DecodePNG): Move the check for overall
	termination of the compressed stream until after the final IDAT has
	been read, so that multi-segment images will work right. Reported by
	Andy Goth on the Wiki.

2010-04-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImgGIF.c:  Formatting
	* generic/tkListbox.c: fix typo;
	* generic/tkTrig.c:    fix typo;
	* generic/tkInt.h:     fix typo; remove not existing tkDisplayList;