@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: RestrictEv.3,v 1.8 2008/06/30 22:57:02 dkf Exp $
+'\" RCS: @(#) $Id: RestrictEv.3,v 1.9 2010/05/11 12:12:50 nijtmans Exp $
 '\" 
 .so man.macros
 .TH Tk_RestrictEvents 3 "" Tk "Tk Library Procedures"
@@ -17,15 +17,15 @@ Tk_RestrictEvents \- filter and selectively delay X events
 \fB#include <tk.h>\fR
 .sp
 Tk_RestrictProc *
-\fBTk_RestrictEvents\fR(\fIproc, clientData, prevClientDataPtr\fR)
+\fBTk_RestrictEvents\fR(\fIproc, arg, prevArgPtr\fR)
 .SH ARGUMENTS
-.AS Tk_RestrictProc **prevClientDataPtr
+.AS Tk_RestrictProc **prevArgPtr
 .AP Tk_RestrictProc *proc in
 Predicate procedure to call to filter incoming X events.
 NULL means do not restrict events at all.
-.AP ClientData clientData in
+.AP ClientData arg in
 Arbitrary argument to pass to \fIproc\fR.
-.AP ClientData *prevClientDataPtr out
+.AP ClientData *prevArgPtr out
 Pointer to place to save argument to previous restrict procedure.
 .BE
 .SH DESCRIPTION
@@ -42,10 +42,10 @@ is a procedure with arguments and result that match
 the type \fBTk_RestrictProc\fR:
 .CS
 typedef Tk_RestrictAction \fBTk_RestrictProc\fR(
-        ClientData \fIclientData\fR,
+        ClientData \fIarg\fR,
         XEvent *\fIeventPtr\fR);
 .CE
-The \fIclientData\fR argument is a copy of the \fIclientData\fR passed
+The \fIarg\fR argument is a copy of the \fIarg\fR passed
 to \fBTk_RestrictEvents\fR; it may be used to provide \fIproc\fR with
 information it needs to filter events.  The \fIeventPtr\fR points to
 an event under consideration.  \fIProc\fR returns a restrict action
@@ -57,7 +57,7 @@ left on the event queue for later processing.  If the return value is
 \fBTK_DISCARD_EVENT\fR, then the event will be removed from the event
 queue and discarded without being processed.
 .PP
-\fBTk_RestrictEvents\fR uses its return value and \fIprevClientDataPtr\fR
+\fBTk_RestrictEvents\fR uses its return value and \fIprevArgPtr\fR
 to return information about the current event restriction procedure
 (a NULL return value means there are currently no restrictions).
 These values may be used to restore the previous restriction state
